@@ -12,6 +12,9 @@ influences from my experiences with the former kwm.
 In 0.10:
 --------
 
+patchlevel 31: 
+
+	-- Bernd: minor fixes (typos in the sound events)
 patchlevel 30:
 	-- Bernd: 
 	
